# Laboratorio-2---TIA

./: CMakeLists.txt  code.txt  files.txt  main.cpp  perceptron  perceptron.cpp  perceptron.py  visualization.py
models/: perceptron.h  perceptron_torch.h
result/: cpp_and_model.txt  cpp_or_model.txt  py_and_model.txt  py_or_model.txt
